# HW_22

./: .gitignore  README.md  category_fixture.json  products_fixture.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: home.html
config/: settings.py  urls.py
