[tool.poetry]
name = "hw-22"
version = "0.1.0"
description = ""
authors = ["VsevolodLunev <126673517+VsevolodLunev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
