[tool.poetry]
name = "hw-22"
version = "0.1.0"
description = ""
authors = ["VsevolodLunev <126673517+VsevolodLunev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
sqlparse = "^0.5.3"
pillow = "^11.2.1"
ipython = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
